<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, WhcgAndroidClientActivity!</string>
    <string name="app_name">金鹏市民通</string>
    <string name="welcone_title">金鹏市民通欢迎您</string>
    <string name="userlogin">市民登录</string>
    <string name="findpwdstr"><u>找回密码</u></string>
    <string name="regstr"><u>注册</u></string>
    <string name="zeroVal">0</string>
    <string name="all">所有</string>
    <string name="edit">编辑</string>
    <string name="selfinfo_edit">编辑个人信息</string>
    <string name="news">城管新闻</string>
    <string name="jubao">投诉建议</string>
    <string name="gongshi">公示排行</string>
    <string name="chulijieguo">处理结果</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="officicalmobile">15802712319</string>
    <string name="commentNum">评论</string>
    <string name="bt_return_text">确定</string>
    <string name="main_title_news">城管新闻</string>
    <string name="main_title_personalInfo">个人中心</string>
    <string name="main_title_Userlogin">市民登录</string>
    <string name="main_title_UserReg">市民注册</string>
    <string name="main_title_Tou">投诉建议</string>
    <string name="main_title_personalinfo_edit">个人信息编辑</string>
    <string name="news_type1_text">新闻类型1</string>
    <string name="news_type2_text">新闻类型2</string>
    <string name="news_type3_text">新闻类型3</string>
    <string name="deflaut_weather">暂无天气信息</string>
    <string name="emptyusername">请输入手机号</string>
    <string name="emptypassowrd">请输入密码</string>
    <string name="login_success">登陆成功</string>
    <string name="login_no_user">此手机号未注册</string>
    <string name="login_wrong_password">密码错误</string>
    <string name="login_System_error">系统出错</string>
    <string name="long_confirm">确定</string>
    <string name="mytopic">我的投诉</string>
    <string name="submit">所有</string>
    <string name="notcheck">待受理</string>
    <string name="shenhe">处理中</string>
    <string name="checknotpass">未受理</string>
    <string name="yichuli">已处理</string>
    <string name="yitijiao">所有</string>
    <string name="phoneNumber">手机号：</string>
    <string name="nickname">昵称：</string>
    <string name="score">积分</string>
    <string name="topic_insert_success">投诉成功,确定查看已提交投诉</string>
    <string name="topic_insert_fail">投诉失败</string>
    <string name="topic_insert_system">投诉异常</string>
    <string name="topic_uploading">投诉中。。</string>
    <string name="topic_start">投诉开始</string>
    <string name="findpwd_str1">发送完毕即可重新登录，无需再次输入</string>
    <string name="findpwd_str2">"注：
1.发送注册短信不收取任何费用，您仅需支付由网络运营商所收取的标准短信费。
2.手机号仅用于个人登录，其他用户不可见。
3.海外用户暂不支持短信注册。请使用邮箱注册或快速注册。"</string>
    <string name="reguser_str1">*编辑短信6-16位数字为您的用户密码，发送至：</string>
    <string name="reguser_str2">发送完毕即可登录，账号为发送短信的手机号码</string>
    <string name="welcome">欢迎使用</string>
    <string name="upload_takephoto">现场拍照</string>
    <string name="upload_selectphoto">选取图片</string>
    <string name="upload_content_hint">请描述问题，为了提高问题审核通过率，请详细描述问题地点、问题详情</string>
    <string name="upload_selectpos">点击进行地图定位</string>
    <string name="input_error">输入错误</string>
    <string name="send_commits">提交投诉</string>
    <string name="empty_content">请输入内容</string>
    <string name="empty_pic">请配上图片</string>
    <string name="empty_region">请选择区域</string>
    <string name="sending_commits_now">正在提交投诉</string>
    <string name="map_error">很抱歉，由于您的手机不支持谷歌地图，所以目前地图选择功能无法使用！</string>
    <string name="new_password">新密码</string>
    <string name="error_numeric">密码请输入数字</string>
    <string name="error_lessthansix">请输入至少六位数字</string>
    <string name="error_morethanten">请输入最多十位数字</string>
    <string name="send_tonumber">发送至15802712319</string>
    <string name="updating_personal_info">正在更新个人数据</string>
    <string name="updating_personal_info_now">正在更新个人数据</string>
    <string name="updating_personal_success">个人信息更新成功</string>
    <string name="updating_personal_fail">个人信息更新失败</string>
    <string name="updating_personal_system">个人信息更新异常</string>
    <string name="updating_personal_getold">获取个人信息</string>
    <string name="logout">注销</string>
    <string name="logout_confirm">确认注销吗？</string>
    <string name="show_comment_edit">评价投诉处理</string>
    <string name="submit_comment">提交评价</string>
    <string name="submit_comment_now">正在提交评价</string>
    <string name="submit_comment_success">提交评价成功</string>
    <string name="submit_comment_fail">提交评价失败</string>
    <string name="submit_comment_system">提交评价异常</string>
    <string name="main_title_more">更多</string>
    <string name="about">关于</string>
    <string name="personalcenter">个人中心</string>
    <string name="update">更新</string>
    <string name="setting">帮助</string>
    <string name="version">版本号：jpe1.0</string>
    <string name="manager">金鹏电子信息机器有限公司</string>
    <string name="provider">金鹏智慧城市研发中心</string>
    <string name="topicdetail_mode_str">来源：</string>
    <string name="topicdetail_type_str">类型：</string>
    <string name="topicdetail_region_str">区域：</string>
    <string name="topicdetail_track_str">问题追踪：</string>
    <string name="topicdetail_track_waitcheck_str">您的问题已提交，等待处理！</string>
    <string name="topicdetail_track_checked_str">您的问题正在处理中！</string>
    <string name="topicdetail_track_done_str">您的问题已成功处理！</string>
    <string name="shouce">城管手册</string>
    <string name="ManualMiddleTitle">城管手册</string>
    <string name="firstloadbtn">开始使用市民通</string>
    <string name="ImageContentDestribution">图片</string>
    <string name="around">周边雷达</string>
    <string name="imgpath">jpe_smt</string>

</resources>