<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <include
        android:id="@id/top_main_bottom"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        layout="@layout/top_bottom" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/floatbg" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15.0dip"
                android:layout_marginRight="15.0dip"
                android:layout_marginTop="10.0dip"
                android:text="@string/reguser_str1"
                android:textColor="@color/Black"
                android:textSize="16.0dip" />

            <RelativeLayout
                android:id="@id/RelativeLayout02"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:paddingTop="14.0dip" >

                <EditText
                    android:id="@id/regloginpassword1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginBottom="3.0dip"
                    android:layout_marginLeft="15.0dip"
                    android:layout_marginRight="15.0sp"
                    android:layout_marginTop="15.0dip"
                    android:hint="请输入密码"
                    android:paddingLeft="60.0sp"
                    android:password="true"
                    android:phoneNumber="true"
                    android:saveEnabled="true" />

                <TextView
                    android:id="@id/TextView01"
                    android:layout_width="70.0dip"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/regloginpassword1"
                    android:layout_alignLeft="@id/regloginpassword1"
                    android:layout_alignTop="@id/regloginpassword1"
                    android:layout_marginRight="15.0sp"
                    android:gravity="center_vertical"
                    android:paddingLeft="7.0sp"
                    android:text="输入密码"
                    android:textColor="@color/Black"
                    android:textSize="12.0dip" />

                <Button
                    android:id="@id/do_reg_button"
                    android:layout_width="230.0dip"
                    android:layout_height="50.0dip"
                    android:layout_below="@id/TextView01"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="14.0dip"
                    android:background="@drawable/btn_selector1"
                    android:text="@string/send_tonumber" />
            </RelativeLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15.0dip"
                android:layout_marginRight="15.0dip"
                android:layout_marginTop="15.0dip"
                android:text="@string/reguser_str2"
                android:textColor="@color/Black"
                android:textSize="16.0dip" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15.0dip"
                android:layout_marginRight="15.0dip"
                android:layout_marginTop="35.0dip"
                android:text="@string/findpwd_str2"
                android:textColor="@color/Black"
                android:textSize="16.0dip" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>