<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <include
        android:id="@id/top_main_bottom"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        layout="@layout/top_bottom" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/floatbg" >

        <RelativeLayout
            android:id="@id/RelativeLayout02"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:paddingTop="14.0dip" >

            <EditText
                android:id="@id/loginusername"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="3.0dip"
                android:layout_marginLeft="15.0dip"
                android:layout_marginRight="15.0sp"
                android:layout_marginTop="15.0dip"
                android:hint="请输入手机号码"
                android:paddingLeft="60.0sp"
                android:phoneNumber="true"
                android:saveEnabled="true" />

            <TextView
                android:id="@id/TextView01"
                android:layout_width="70.0dip"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/loginusername"
                android:layout_alignLeft="@id/loginusername"
                android:layout_alignTop="@id/loginusername"
                android:layout_marginRight="15.0sp"
                android:gravity="center_vertical"
                android:paddingLeft="7.0sp"
                android:text="帐号"
                android:textColor="@color/Black"
                android:textSize="16.0dip" />

            <EditText
                android:id="@id/loginpassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/loginusername"
                android:layout_alignRight="@id/loginusername"
                android:layout_below="@id/loginusername"
                android:layout_marginTop="5.0dip"
                android:hint="请输入通行证密码"
                android:maxLength="16"
                android:paddingLeft="60.0sp"
                android:password="true"
                android:phoneNumber="true"
                android:saveEnabled="true" >

                <requestFocus />
            </EditText>

            <TextView
                android:id="@id/TextView02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/loginpassword"
                android:layout_alignLeft="@id/loginpassword"
                android:layout_alignRight="@id/TextView01"
                android:layout_alignTop="@id/loginpassword"
                android:gravity="center_vertical"
                android:paddingLeft="7.0sp"
                android:text="密 码"
                android:textColor="@color/Black"
                android:textSize="16.0dip" />

            <Button
                android:id="@id/do_login_button"
                style="@style/main_title_style"
                android:layout_width="wrap_content"
                android:layout_height="50.0dip"
                android:layout_alignRight="@id/loginpassword"
                android:layout_below="@id/loginpassword"
                android:layout_marginLeft="5.0dip"
                android:layout_marginTop="14.0dip"
                android:background="@drawable/btn_selector2"
                android:text="登录" />

            <LinearLayout
                android:id="@id/login_button_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/do_login_button"
                android:layout_centerHorizontal="true" >

                <TextView
                    android:id="@id/findpwb_txtview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10.0dip"
                    android:clickable="true"
                    android:text="@string/findpwdstr"
                    android:textAppearance="@style/findpwdstr_style"
                    android:textColor="@color/Black" />

                <TextView
                    android:id="@id/do_reg_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5.0dip"
                    android:layout_marginTop="10.0dip"
                    android:text="@string/regstr"
                    android:textAppearance="@style/findpwdstr_style"
                    android:textColor="@color/Black" />
            </LinearLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_button_bar"
                android:layout_marginLeft="15.0dip"
                android:layout_marginRight="15.0dip"
                android:layout_marginTop="35.0dip"
                android:text="@string/findpwd_str2"
                android:textColor="@color/Black"
                android:textSize="16.0dip" />
        </RelativeLayout>
    </ScrollView>

</LinearLayout>